# rxn-metrics

./: .buildinfo  .bumpversion.cfg  .travis.yml  README.html  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: docs.yaml  pypi.yaml  tests.yaml
_modules/: index.html
_modules/rxn/metrics/: class_tokens.html  classification_translation.html  context_metrics.html  forward_metrics.html  metrics.html  metrics_calculator.html  metrics_files.html  retro_metrics.html  run_metrics.html  tokenize_file.html  true_reactant_accuracy.html  utils.html
_modules/rxn/metrics/scripts/: ensure_data_dimension.html  join_data_files.html  parse_metrics_into_csv.html  prepare_retro_metrics.html  reorder_retro_predictions_class_token.html
_sources/: README.md.txt  api.rst.txt
docs/source/: conf.py  index.md
src/rxn/metrics/: __init__.py  class_tokens.py  classification_translation.py  context_metrics.py  metrics.py  metrics_calculator.py  metrics_files.py  retro_metrics.py  run_metrics.py  true_reactant_accuracy.py  true_reactant_determination.py  utils.py
src/rxn/metrics/rxn_models/: utils.py
src/rxn/metrics/scripts/: prepare_context_metrics.py  prepare_forward_metrics.py  prepare_retro_metrics.py  reorder_retro_predictions_class_token.py  rxn_evaluate_metrics.py
tests/: test_context_metrics.py  test_metrics.py  test_tokenize_file.py  test_true_reactant_accuracy.py  test_utils.py
tests/rxn_models/: test_context_metrics.py  test_metrics.py  test_tokenize_file.py
tests/scripts/: test_ensure_data_dimension.py  test_join_data_files.py  test_reorder_retro_files.py
