[metadata]
name = rxn-metrics
version = attr: rxn.metrics.__version__
description = Metrics for RXN models
author = IBM RXN team
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rxn4chemistry/rxn-metrics
project_urls =
    Documentation = https://rxn4chemistry.github.io/rxn-metrics/
    Repository = https://github.com/rxn4chemistry/rxn-metrics
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.6
zip_safe = False
include_package_data = True
install_requires =
    click>=8.0
    pandas>=1.1.0
    rxn-chem-utils>=1.1.4
    rxn-onmt-models>=1.0.0
    rxn-onmt-utils>=1.0.0
    rxn-utils>=1.1.9

[options.packages.find]
where = src

[options.package_data]
rxn.metrics =
    py.typed

[options.extras_require]
dev =
    black>=22.3.0
    bump2version>=1.0.1
    flake8>=3.8.4
    isort>=5.10.1
    mypy>=0.910
    pytest>=5.3.4
    types-setuptools>=57.4.14
rdkit =
    # install RDKit. This is not as a setup dependency in order not to install it
    # in downstream packages and avoid potential conflicts with the conda
    # installation of RDKit
    rdkit-pypi>=2021.3.2 ; python_version<"3.7"
    rdkit>=2022.3.4 ; python_version>="3.7"

[options.entry_points]
console_scripts =
    rxn-evaluate-metrics = rxn.metrics.scripts.rxn_evaluate_metrics:main
    rxn-parse-metrics-into-csv = rxn.metrics.scripts.parse_metrics_into_csv:main
    rxn-prepare-context-metrics = rxn.metrics.scripts.prepare_context_metrics:main
    rxn-prepare-forward-metrics = rxn.metrics.scripts.prepare_forward_metrics:main
    rxn-prepare-retro-metrics = rxn.metrics.scripts.prepare_retro_metrics:main

[flake8]
extend-ignore = E203, E501
